# inputstream.hls

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  NOTES  README.md  README.windows.md  TODO
debian/: changelog.in  control  kodi-inputstream-mpd.install  rules
depends/common/expat/: CMakeLists.txt
inputstream.hls/: addon.xml  addon.xml.in  changelog.txt
inputstream.hls/resources/: settings.xml
inputstream.hls/resources/language/resource.language.en_gb/: strings.po
inputstream.mpd/: addon.xml.in  changelog.txt
inputstream.mpd/resources/: settings.xml
inputstream.mpd/resources/language/resource.language.en_gb/: strings.po
kodi/inputstream.hls/: inputstream.hls.txt
lib/: demux-mpegts
lib/libbento4/: CMakeLists.txt
lib/libbento4/Core/: Ap4CommonEncryption.cpp  Ap4CommonEncryption.h  Ap4FragmentSampleTable.cpp  Ap4LinearReader.cpp  Ap4LinearReader.h
lib/libbento4/System/Kodi/: Ap4KodiFileByteStream.cpp
lib/libbento4/System/StdC/: Ap4StdCFileByteStream.cpp
lib/libcurl/include/curl/: curl.h
lib/libcurl/lib/: libcurl.exp  libcurl.lib
sample-files/: 250kbit.m3u8  a19199272.m3u8  bipbopall-advance.strm  bipbopall-basic.strm  bipbopall-medium.strm  discontinuity2.m3u8  espn.strm  h.m3u8  mp4-live-mpd-AV-BS.mpd  prog_index.m3u8  test-hls-enc.strm  test-hls.strm  test.strm
sample-files/advance_demo/: fileSequence0.aac  fileSequence0.ts
sample-files/bigbuckbunny/: index.m3u8
sample-files/discontinuity/: 1.ts  bipbopall-basic.strm  discontinuity.m3u8  discontinuity2.m3u8  main.m3u8  merged.ts
sample-files/encrypted/: aes_key  hls_400_00000.ts  index.m3u8
src/: KodiDASH.cpp  KodiDASH.h  Main.cpp  MainDash.cpp  MainDash.h  MainHLS.cpp  MainHLS.h  SSD_dll.h  SingleSampleDecrypter.cpp  decoding.h  demux_container.h  globals.h  helpers.cpp  helpers.h  kodi.h  kodi_hls.cpp  kodi_hls.h  oscompat.cpp  oscompat.h  ring_buffer.cpp  ring_buffer.h  segment_storage.cpp  segment_storage.h  session.cpp  session.h
src/dash/: DASHStream.cpp  DASHStream.h  DASHTree.cpp  DASHTree.h
src/demux/: demux.cpp  demux.h
src/demuxer/: demux.cpp  demux.h  elementaryStream.cpp  elementaryStream.h  tsDemuxer.cpp  tsDemuxer.h
src/downloader/: downloader.h  file_downloader.cpp  file_downloader.h  kodi_downloader.cpp  kodi_downloader.h
src/hls/: HLS.cpp  HLS.h  SegmentReader.cpp  SegmentReader.h  active_segment.h  active_segment_controller.cpp  active_segment_controller.h  decrypter.cpp  decrypter.h  playlist.cpp  playlist.h  playlist_reloader.cpp  playlist_reloader.h  segment_data.h  segment_downloader.h  session.cpp  session.h  stream.cpp  stream.h
src/mpegts/: ES_AAC.cpp  ES_AAC.h  ES_h264.cpp  elementaryStream.cpp  elementaryStream.h  tsDemuxer.cpp  tsDemuxer.h
src/queue/: active_segment_controller.cpp  active_segment_controller.h  active_segment_queue.cpp  active_segment_queue.h  demux_queue.h  download_queue.cpp  download_queue.h  downloader.h  file_downloader.cpp  file_downloader.h  kodi_downloader.cpp  kodi_downloader.h
src/tsdemuxer/: main.cpp  main.h  ts.cpp  ts.h
test/: active_segment_controller_test.cpp  decrypter_test.cpp  demux.cpp  global.cpp  helpers.cpp  helpers.h  ring_buffer_test.cpp  segment_storage_test.cpp  session_test.cpp  xbmc.cpp
test-kodi/: README  kodi_hls_test.cpp
test/encrypted/: D00000002.ts  aes_iv  aes_key  audio.aac  id3.txt  video.h264
test/hls/: aes_key  bipbopall_session.m3u8  encrypted.m3u8  hls_400_.m3u8  hls_test.cpp
test/hls/gear1/: fileSequence1.ts
test/live/: fake_live_reload.m3u8  master.m3u8  media.m3u8  temp_playlist.m3u8  updated_media.m3u8
wvdecrypter/: CMakeLists.txt  README.md  wvdecrypter.cpp  wvdecrypter_android.cpp
wvdecrypter/cdm/base/: native_library_mac.mm
wvdecrypter/cdm/media/cdm/: cdm_adapter.cc  cdm_adapter.h
